syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message LogMissing {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1 [(gorm.field).tag = {primary_key: true}];
  uint64 block_number = 2;
}
